RESOLVED FIXED71806
Web Inspector: crash upon InspectorValue serialization that has 0 value / array entry.
https://bugs.webkit.org/show_bug.cgi?id=71806
Summary Web Inspector: crash upon InspectorValue serialization that has 0 value / arr...
Pavel Feldman
Reported 2011-11-08 05:48:03 PST
Patch to follow.
Attachments
Patch (2.79 KB, patch)
2011-11-08 05:49 PST, Pavel Feldman
no flags
[Patch] Correct patch (2.81 KB, patch)
2011-11-08 05:55 PST, Pavel Feldman
no flags
Patch (5.88 KB, patch)
2011-11-08 08:47 PST, Pavel Feldman
no flags
[Patch] with grammar fixed. (5.88 KB, patch)
2011-11-08 09:19 PST, Pavel Feldman
no flags
[Patch] with grammar fixed. (5.88 KB, patch)
2011-11-08 09:24 PST, Pavel Feldman
yurys: review+
Pavel Feldman
Comment 1 2011-11-08 05:49:45 PST
Pavel Feldman
Comment 2 2011-11-08 05:55:11 PST
Created attachment 114054 [details] [Patch] Correct patch
Yury Semikhatsky
Comment 3 2011-11-08 05:58:42 PST
Comment on attachment 114054 [details] [Patch] Correct patch Please add a test for this.
Pavel Feldman
Comment 4 2011-11-08 08:47:53 PST
Alexander Pavlov (apavlov)
Comment 5 2011-11-08 08:50:54 PST
Comment on attachment 114083 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=114083&action=review > Source/WebCore/inspector/InspectorDOMAgent.cpp:1188 > + *error = "No node with given id does not belong to the document."; grammar: "No node with given id belongs to the document." Also, we don't seem to use trailing dots in the error messages.
Pavel Feldman
Comment 6 2011-11-08 09:19:23 PST
Created attachment 114091 [details] [Patch] with grammar fixed.
Pavel Feldman
Comment 7 2011-11-08 09:24:56 PST
Created attachment 114092 [details] [Patch] with grammar fixed.
Yury Semikhatsky
Comment 8 2011-11-09 02:28:42 PST
Comment on attachment 114092 [details] [Patch] with grammar fixed. View in context: https://bugs.webkit.org/attachment.cgi?id=114092&action=review > Source/WebCore/inspector/InspectorDOMAgent.cpp:1188 > + *error = "Node with given id does not belong to the document."; As Alexander pointed out we don't use trailing dots in other error messages.
Pavel Feldman
Comment 9 2011-11-09 03:49:31 PST
Note You need to log in before you can comment on or make changes to this bug.