Web Inspector: crash upon InspectorValue serialization that has 0 value / array entry. https://bugs.webkit.org/show_bug.cgi?id=71806

Reviewed by Yury Semikhatsky.

Source/WebCore:

Test: inspector/elements/resolve-alien-node.html

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::resolveNode):
* inspector/InspectorValues.h:
(WebCore::InspectorObject::setValue):
(WebCore::InspectorObject::setObject):
(WebCore::InspectorObject::setArray):
(WebCore::InspectorArray::pushValue):
(WebCore::InspectorArray::pushObject):
(WebCore::InspectorArray::pushArray):

LayoutTests:

* inspector/elements/resolve-alien-node-expected.txt: Added.
* inspector/elements/resolve-alien-node.html: Added.

Canonical link: https://commits.webkit.org/88250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99683 268f45cc-cd09-0410-ab3c-d52691b4dbfc